# airflow-pybr25

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  env_template  pyproject.toml
project_home/: airflow.cfg  passwords.json
project_home/dags/: branch.py  dependencia.py  dependencia2.py  hello_world.py  processar_dados_de_vendas.py
